external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_scoped_autocomplete@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09009]: unused struct field
  ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:4:21
  │
4 │     public struct A(u64) has copy, drop;
  │                     ^^^ The '0' field of the 'A' type is unused
  │
  = This warning can be suppressed with '#[allow(unused_field)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09009]: unused struct field
  ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:7:9
  │
7 │         a: A
  │         ^ The 'a' field of the 'B' type is unused
  │
  = This warning can be suppressed with '#[allow(unused_field)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:19:23
   │
19 │         let _tmp1 = _a.;
   │                       ^ Possible dot names: 'a::m::t0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:19:24
   │
19 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:20:23
   │
20 │         let _tmp2 = _b.;
   │                       ^ Possible dot names: 'a::m::t1'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_scoped_autocomplete.move:20:24
   │
20 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number
